maze.island.IslandMaze.scala.error
Compilation error:
IslandMaze:55: error: expected class or object definition
def longerMurGauche() {
^IslandMaze:80: error: expected start of definition
override def run() {
         ^IslandMaze:95: error: Unmatched closing brace '}' ignored here
}
^